package seedu.address;

/**
 * Represents an enumeration of all the Paths needed by Alfred.
 */
public class Paths {

    public static final String ICON_APPLICATION = "/images/alfred_icon.png";
    public static final String STUDENT_ICON = "/images/student_icon.png";
    public static final String MENTOR_ICON = "/images/mentor_icon.png";
    public static final String TEAM_ICON = "/images/team_icon.png";
    public static final String SCORE_ICON = "/images/medal_icon.png";
}

